fix: footer covering content

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,3 +7,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+  background-color: #ff9f9f;
+}
